--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   <body>
     <div id="root"></div>
     <!-- 👇 importante usar ruta relativa -->
-    <script type="module" src="./src/main.tsx"></script>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
